# eventchain-v2

./: README.md  pyproject.toml  solution_patch.diff
eventchain/: __init__.py  account.py  aggregate.py  compliance.py  currency.py  event.py  exceptions.py  limits.py  notifications.py  projection.py  replay.py  snapshot.py  store.py  versioning.py
tests/: test_account.py  test_aggregate.py  test_event.py  test_projection.py  test_replay.py  test_store.py  test_versioning.py
