[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eventchain"
version = "0.3.1"
description = "A lightweight event sourcing framework for Python"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["event-sourcing", "cqrs", "ddd"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
